--- a/assist/style/adminandsulogin.css
+++ b/assist/style/adminandsulogin.css
@@ -63,7 +63,10 @@ a, span{
     color: blue;
     background-color: #fff;
 }
-
+input[type="submit"]{
+    color: blue;
+    background-image: linear-gradient(rgba(255, 0, 0, 0.212), rgba(0, 0, 255, 0.205));
+}
 input[type="submit"]:hover{
     background-color: rgba(0, 0, 255, 0.808);
     color: #fff;
